--- a/css/style.css
+++ b/css/style.css
@@ -31,15 +31,18 @@
 
 ::-webkit-scrollbar {
     width: 8px;
-}
-
-::-webkit-scrollbar-thumb {
-    background: var(--grey-scroll);
-    border-radius: 10px;
+    border-radius: 50vh;
 }
 
 ::-webkit-scrollbar-track {
     background: var(--grey-bg);
+    border-radius: 50vh;
+    margin-block: 0.1em;
+}
+
+::-webkit-scrollbar-thumb {
+    background: var(--grey-scroll);
+    border-radius: 50vh;
 }
 
 
@@ -58,14 +61,23 @@ a {
     color: var(--blue-primary);
 }
 
-h1,
+.link-underline:hover {
+    text-decoration: underline;
+}
+
+h1 {
+    color: var(--blue-primary);
+    margin: 0.8rem 0;
+    font-weight: 600;
+}
+
 h2,
 h3,
 h4,
 h5,
 h6 {
     color: var(--blue-primary);
-    margin: 0.8rem 0;
+    margin: 2rem 0 1rem 0;
     font-weight: 600;
 }
 
@@ -186,12 +198,14 @@ main {
 .sub-page {
     height: calc(100vh - 50px) !important;
     margin-top: 0rem;
+    scroll-behavior: smooth;
 }
 
 .sub-heading-blue {
     background-color: var(--blue-secondary);
     display: inline-block;
     padding: 10px;
+    margin-top: 1rem;
     border-radius: 5px;
 }
 
@@ -209,7 +223,7 @@ main {
 }
 
 .separator {
-    margin: 30px 0;
+    margin: 35px 0;
     display: block;
 }
 
@@ -324,7 +338,7 @@ main {
     justify-content: space-around;
     align-items: center;
     background: var(--grey-bg);
-    box-shadow: 0 3px 1px rgba(0, 0, 0, 0.15);
+    box-shadow: 0 3px 1px rgba(31, 29, 89, 0.15);
 }
 
 .project-image img {
@@ -358,7 +372,7 @@ main {
 }
 
 .contributor {
-    box-shadow: 0 3px 1px rgba(0, 0, 0, 0.15);
+    box-shadow: 0 3px 1px rgba(31, 29, 89, 0.15);
     border: 1px solid var(--grey-bg);
     transition: 0.3s box-shadow, 0.3s margin-top ease-in-out;
     width: 32%;
@@ -371,7 +385,7 @@ main {
 }
 
 .contributor:hover {
-    box-shadow: 0 10px 15px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 10px 15px rgba(31, 29, 89, 0.19);
 }
 
 .contributor-btn {
@@ -448,7 +462,7 @@ main {
 
 .cards {
     /* box-shadow: 0 20px 25px rgba(0, 0, 0, 0.15); */
-    box-shadow: 0 3px 1px rgba(0, 0, 0, 0.15);
+    box-shadow: 0 3px 1px rgba(31, 29, 89, 0.15);
     border: 1px solid var(--grey-bg);
     width: 49%;
     background-color: var(--btn-white);
@@ -492,7 +506,7 @@ main {
     border-radius: 10px;
     padding: 20px;
     margin: 20px 0;
-    box-shadow: 0 3px 1px rgba(0, 0, 0, 0.15);
+    box-shadow: 0 3px 1px rgba(31, 29, 89, 0.15);
 }
 
 .userstorie-titel {
@@ -595,7 +609,7 @@ main {
     justify-content: center;
     line-height: 24px;
     max-width: 100%;
-    padding: 0 25px;
+    padding: 0 10px;
     position: relative;
     text-align: center;
     text-decoration: none;
@@ -670,6 +684,30 @@ main {
 }
 
 
+/*==========  svg animate  =========*/
+
+#toTop {
+    /* display: none; */
+    position: fixed;
+    bottom: 38px;
+    right: 50px;
+    z-index: 99;
+    font-size: 18px;
+    background-color: var(--yellow-secondary);
+    color: var(--blue-primary);
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 9px 9px 0 9px;
+    border-radius: 5px;
+}
+
+#toTop:hover {
+    background-color: var(--blue-primary);
+    color: var(--white);
+}
+
+
 /*==========  responsive  =========*/
 
 @media only screen and (max-width: 1180px) {
@@ -727,6 +765,9 @@ main {
         padding: 0 10px;
     }
     .project-view-container {
+        display: block;
+    }
+    .categorie-bg {
         display: block;
     }
 }
