--- a/css/style.css
+++ b/css/style.css
@@ -110,19 +110,18 @@ hr {
 /*==========  Progress bar  =========*/
 
 .progress-container {
-    background: #d22323;
+    background: var(--grey-bg);
     position: fixed;
-    top: 93px;
+    top: 0;
     z-index: 999;
-    width: 89%;
+    width: 100%;
     height: 7px;
-    left: 125px;
-    border-radius: 5px;
 }
 
 .progress-bar {
     width: 0%;
     height: 7px;
+    background: #29cf91;
 }
 
 
@@ -690,7 +689,7 @@ main {
     display: none;
     position: fixed;
     bottom: 38px;
-    right: 50px;
+    right: 38px;
     z-index: 99;
     font-size: 18px;
     background-color: var(--yellow-secondary);
