--- a/css/style.css
+++ b/css/style.css
@@ -190,6 +190,7 @@ main {
     padding: 10px 20px;
     margin-right: 20px;
     overflow: scroll;
+    -webkit-overflow-scrolling: touch;
     overflow-x: hidden;
     position: fixed;
     scroll-behavior: smooth;
@@ -699,6 +700,12 @@ main {
     cursor: pointer;
     padding: 9px 9px 0 9px;
     border-radius: 5px;
+    transition: all 0.5s ease 0s;
+    -moz-transition: all 0.5s ease 0s;
+    -webkit-transition: all 0.5s ease 0s;
+    -o-transition: all 0.5s ease 0s;
+    scroll-behavior: smooth;
+    -webkit-overflow-scrolling: touch;
 }
 
 #toTop:hover {
@@ -768,6 +775,10 @@ main {
     }
     .categorie-bg {
         display: block;
+    }
+    #toTop {
+        bottom: 22px;
+        right: 22px;
     }
 }
 
